--- a/style.css
+++ b/style.css
@@ -29,3 +29,31 @@ h2{
 .favo li {
     display: inline-block;
 }
+
+
+.event_title{
+    color:white;
+}
+
+.event_1{
+    color:white;
+    border:solid 3px white;
+    border-radius: 10px;
+    
+    /* margin: 10%; */
+    padding:3%;
+    display: flex;
+    flex-direction: column;
+   justify-content: space-between;
+   align-items: center;
+   display:inline-block;
+
+}
+.enter{
+    border-radius: 10px;
+    background-color: #0ba2e8;
+    width:150px;
+    color:white;
+    height:45px;
+    font-weight: bold;
+}
