finishing up the javascript

--- a/style.css
+++ b/style.css
@@ -134,3 +134,18 @@ border: solid 3px;
     border-radius: 10px;
    
 }
+
+.container{
+    border:solid white 2px;
+    display:inline-block;
+    display:flexbox;
+    border-radius: 15px;
+    
+
+
+}
+.lastlast{
+    margin:10px;
+    padding-right: 45px;
+    
+}
